fixed for firefox mozilla author name spacing

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -386,7 +386,8 @@ $button-size: 1.5rem;
 		p,
 		.author-social {
 			display: block;
-			max-width: 125px;
+			// max-width: 125px;
+			white-space: nowrap;
 		}
 		h3 {
 			margin-top: 10px;
